<resources>
    <string name="app_name">moviestar</string>
    <string name="collection">Collection</string>
    <string name="websearch">Websearch</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="title">Title</string>
    <string name="actor">Actor</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="search">Search</string>
    <string name="myLists">My Lists</string>
    <string name="name">Name</string>
    <string name="newList">New List</string>
    <string name="addList">Add List</string>
    <string name="editList">Edit List</string>
    <string name="deleteList">Delete List</string>
    <string name="deleteTitles">Remove Titles</string>
    <string name="deleteFromCollection">Delete from Collection</string>
    <string name="addToList">Add to List</string>
    <string name="textViewTitle">Title:</string>
    <string name="textViewRuntime">Runtime: (in Minutes)</string>
    <string name="textViewRelease">Release: (dd.MM.YYYY)</string>
    <string name="textViewDirectors">Directors: (seperate with ,)</string>
    <string name="textViewGenres">Genres: (seperate with ,)</string>
    <string name="textViewActors">Actors: (seperate with ,)</string>
    <string name="textViewRating">Rating</string>
    <string name="textViewDescription">Description:</string>
    <string name="addToCollection">Add to Collection</string>
    <string name="addNewMovie">New Movie</string>
    <string name="addNewSeries">New Series</string>
</resources>
