<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="de.kl.fh.moviestar.Movies">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/position"
        android:text="Series"
        android:id="@+id/position"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="40dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myLists"
        android:textSize="40sp"
        android:textColor="@color/letter"
        android:id="@+id/myLists"
        android:layout_marginTop="145dp"
        android:layout_below="@id/position"
        style="?android:attr/borderlessButtonStyle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/collection"
        android:textSize="40sp"
        android:textColor="@color/letter"
        android:layout_marginTop="20dp"
        android:id="@+id/collection"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/myLists"
        android:layout_alignParentStart="true" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/websearch"
        android:textSize="40sp"
        android:textColor="@color/letter"
        android:layout_marginTop="20dp"
        android:id="@+id/websearch"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/collection"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addNewSeries"
        android:textSize="40sp"
        android:textColor="@color/letter"
        android:layout_marginTop="50dp"
        android:id="@+id/addItem"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@id/websearch"
        android:layout_alignParentStart="true" />
</RelativeLayout>
