<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="de.kl.fh.moviestar.Websearch">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textViewTitle"
                android:textColor="@color/letter"
                android:id="@+id/textViewTitle"
                android:layout_alignParentStart="true"
                android:layout_marginTop="25dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/letter"
                android:id="@+id/editTextTitle"
                android:inputType="text"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/letter"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textViewRuntime"
                android:textColor="@color/letter"
                android:id="@+id/textViewRuntime"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/letter"
                android:id="@+id/editTextDuration"
                android:inputType="time"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/letter"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textViewRelease"
                android:textColor="@color/letter"
                android:id="@+id/textViewRelease"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/letter"
                android:id="@+id/editTextRelease"
                android:inputType="date"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/letter"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textViewDescription"
                android:textColor="@color/letter"
                android:id="@+id/textViewDescription"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/letter"
                android:id="@+id/editTextDescription"
                android:inputType="date"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/letter"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textViewGenres"
                android:textColor="@color/letter"
                android:id="@+id/textViewGenres"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/letter"
                android:id="@+id/editTextGenres"
                android:inputType="text"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/letter"
                android:scrollHorizontally="false"
                android:lines="5"
                android:gravity="top|left"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textViewDirectors"
                android:textColor="@color/letter"
                android:id="@+id/textViewDirectors"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/letter"
                android:id="@+id/editTextDirectors"
                android:inputType="text"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/letter"
                android:scrollHorizontally="false"
                android:lines="5"
                android:gravity="top|left"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textViewActors"
                android:textColor="@color/letter"
                android:id="@+id/textViewActors"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/letter"
                android:id="@+id/editTextActors"
                android:inputType="text"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/letter"
                android:scrollHorizontally="false"
                android:lines="5"
                android:gravity="top|left"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addToCollection"
                android:textColor="@color/letter"
                android:textSize="30sp"
                android:id="@+id/addToCollection"
                android:layout_centerHorizontal="true"
                style="?android:attr/borderlessButtonStyle"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>